fix(drawer): add gap between header buttons

--- a/src/components/drawer/bl-drawer.css
+++ b/src/components/drawer/bl-drawer.css
@@ -45,6 +45,8 @@ header {
 }
 
 header .header-buttons {
+  display: flex;
+  gap:24px;
   margin-left: auto;
 }
 
